[package]
name = "miniquad"
version = "0.3.15"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/miniquad"
repository = "https://github.com/not-fl3/miniquad"
description = """
Cross-platform window context and rendering library.
"""
readme="README.md"
keywords = ["graphics", "3D", "opengl", "gamedev", "windowing"]
categories = ["rendering::graphics-api"]

[features]

# Optional log-rs like macros implementation
# disabled by default
log-impl = []

# Vulkan backend support
vulkan = ["ash_037", "gpu_allocator_022", "ash_window_012"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "libloaderapi", "windef", "shellscalingapi", "errhandlingapi", "windowsx", "winbase", "hidusage"] }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
ndk-sys = "0.2"
ndk-context = "0.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2"

[dev-dependencies]
glam = {version = "0.14", features = ["scalar-math"] }
quad-rand = "0.1"

[target.'cfg(target_env = "ohos")'.dependencies]
ohos-xcomponent-binding = "0.1"
raw-window-handle = "0.6"
napi-ohos = { version = "1.1.3", default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { version = "1.1.3" }
ohos-hilog-binding = { version = "0.1.2"}
xcomponent-sys = { version = "0.3.4", features = ["api-14", "keyboard-types"] }
keyboard-types = "0.8.3"
ohos-xcomponent-sys = {version = "0.0.2"}
ohos_enum_macro = { version = "0.0.2"}
ohos-ime-binding = { version = "0.1.0" }
ohos-input-sys = { version = "0.3.2", features = ["api-17"] }
ohos-sys-opaque-types = { version = "0.1.7" }
[target.'cfg(target_env = "ohos")'.build-dependencies]
napi-build-ohos = { version = "1.1.3" }

[dependencies]
# Optional Vulkan dependencies - only enabled when "vulkan" feature is active
# Vulkan API compatibility - supports both ash 0.37 and 0.38
ash_037 = { version = "0.37", optional = true, package = "ash" }
ash_038 = { version = "0.38", optional = true, package = "ash" }

# shaderc暂时移除以避免Windows构建问题
# shaderc = { version = "0.8", optional = true }

gpu_allocator_022 = { version = "0.22", optional = true, package = "gpu-allocator" }
gpu_allocator_028 = { version = "0.28", optional = true, package = "gpu-allocator" }

ash_window_012 = { version = "0.12", optional = true, package = "ash-window" }
ash_window_013 = { version = "0.13", optional = true, package = "ash-window" }

# Error handling for Vulkan backend
anyhow = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
